crates/ktsense-cli/src/snapshots/ktsense__symbols__tests__ambiguous_exits_three.snap
---
source: crates/ktsense-cli/src/symbols.rs
expression: "format!(\"exit {code}\\n{text}\")"
---
exit 3
## Symbols: save

```text
shop.db.InMemoryOrderRepository.save  fun  db/src/main/kotlin/shop/db/InMemoryOrderRepository.kt:13  override fun save(order: Order): OrderId
shop.db.JdbcOrderRepository.save  fun  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:8  override fun save(order: Order): OrderId
shop.order.OrderRepository.save  fun  core/src/main/kotlin/shop/order/OrderRepository.kt:4  fun save(order: Order): OrderId
```
