crates/ktsense-cli/src/snapshots/ktsense__symbols__tests__limit_caps_rows.snap
---
source: crates/ktsense-cli/src/symbols.rs
expression: "format!(\"exit {code}\\n{text}\")"
---
exit 3
## Symbols: save

```text
shop.db.InMemoryOrderRepository.save  fun  db/src/main/kotlin/shop/db/InMemoryOrderRepository.kt:13  override fun save(order: Order): OrderId
```

... 2 more (use --limit)
