crates/ktsense-cli/src/snapshots/ktsense__symbols__tests__no_match.snap
---
source: crates/ktsense-cli/src/symbols.rs
expression: "format!(\"exit {code}\\n{text}\")"
---
exit 1
ktsense: no declaration named save in this workspace; library and dependency declarations are not searched, so use a text search for external types
