crates/ktsense-cli/src/snapshots/ktsense__symbols__tests__pick_missed.snap
---
source: crates/ktsense-cli/src/symbols.rs
expression: "format!(\"exit {code}\\n{text}\")"
---
exit 1
ktsense: no candidate has the fully-qualified name shop.nope.save
